Fixed overflow-wrap

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -44,8 +44,7 @@ h1, h2, h3, h4, h5, h6 {
     line-height: 1.3;
     color: #333F70;
     margin-bottom: 1rem;
-    overflow-wrap: break-word;
-    word-wrap: break-word;
+    overflow-wrap: break-word; /* If text is in flex container, make the container min-width:0; for the text to break */
 }
 
 h1 {
@@ -298,6 +297,7 @@ section {
     border-radius: 8px;
     box-shadow: 0 2px 6px rgba(0, 0, 0, 0.08);
     transition: box-shadow 0.2s ease;
+    min-width: 0; /* Probably required for overflow-wrap:break-word; to work in flex contaners */
 }
 
 .importance-item:hover {
